Cambio titulo prueba

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Justice &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
+	<title>Boilers & Vessels &mdash; Free Website Template, Free HTML5 Template by FreeHTML5.co</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
 	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
@@ -26,7 +26,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400, 900" rel="stylesheet"> -->
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -54,9 +54,9 @@
 
 	</head>
 	<body>
-		
+
 	<div class="gtco-loader"></div>
-	
+
 	<div id="page">
 	<nav class="gtco-nav" role="navigation">
 		<div class="container">
@@ -76,7 +76,7 @@
 					</ul>
 				</div>
 			</div>
-			
+
 		</div>
 	</nav>
 
@@ -95,7 +95,7 @@
 			</div>
 		</div>
 	</section>
-	
+
 	<section id="gtco-about" data-section="about">
 		<div class="container">
 			<div class="row row-pb-md">
@@ -163,7 +163,7 @@
 
 				</div>
 				<div class="col-md-6">
-					
+
 					<div class="gtco-practice-area-item animate-box">
 						<div class="gtco-icon">
 							<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
@@ -279,14 +279,14 @@
 			</div>
 		</div>
 	</section>
-	
+
 	<footer id="gtco-footer" role="contentinfo">
 		<div class="container">
-			
+
 			<div class="row copyright">
 				<div class="col-md-12">
 					<p class="pull-left">
-						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small> 
+						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
 					</p>
 					<p class="pull-right">
@@ -307,7 +307,7 @@
 	<div class="gototop js-top">
 		<a href="#" class="js-gotop"><i class="icon-arrow-up"></i></a>
 	</div>
-	
+
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
 	<!-- jQuery Easing -->
@@ -326,4 +326,3 @@
 
 	</body>
 </html>
-
