--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-2 col-xs-12">
-					<div id="gtco-logo"><a href="index.html">Just<em>ice</em></a></div>
+					<div id="gtco-logo"><a href="index.html">Boilers  &<em> Vessels</em></a></div>
 				</div>
 				<div class="col-xs-10 text-right menu-1 main-nav">
 					<ul>
