cambio de color y adicion de logo

--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-2 col-xs-12">
-					<div id="gtco-logo"><a href="index.html">Boilers  &<em> Vessels</em></a></div>
+					<div id="gtco-logo">
+						<a href="index.html">
+							<img src="images/logo.png" width="180px" height="70px">
+					</a>
+					</div>
 				</div>
 				<div class="col-xs-10 text-right menu-1 main-nav">
 					<ul>
