Se agrega acerca de

--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
 			<div class="row row-pb-md">
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
 					<h1>Bienvenido a Nuestras Oficinas</h1>
-					<p class="sub">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aut praesentium nihil hic quam culpa magnam ducimus suscipit repellat quidem cumque, unde impedit, labore earum eligendi perspiciatis nemo molestiae sequi veritatis. Veritatis, reprehenderit, eaque! Rerum, libero ipsam enim, iusto adipisci quae repellendus officia consequatur ducimus cupiditate impedit, aliquam numquam excepturi.</p>
+					<p class="sub">BOILERS & VESSELS S.A.S., es una empresa Vallecaucana, con sede Principal en la ciudad de Cali, que busca satisfacer las
+						necesidades de los sectores productivos de la industria, tanto a nivel nacional e internacional, como Ingenios Azucareros, Papeleros,
+						Termoeléctricos, Alimenticios, entre otros. Enfocados en la reparación, fabricación, montaje y mantenimientos de equipos industriales
+						y calderas, abarcando lo relacionado con la ingeniería mecánica, eléctrica e instrumentación y diseño. Buscando el mejoramiento continuo
+						y aplicando los estándares de mas alta calidad (ASME, API, entre otros) para resolver las necesidades de los sectores industriales,
+						además de la prestación de servicios de ensayos no destructivos con equipos de alta tecnología.</p>
 					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Welcome</p>
 				</div>
 			</div>
