--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<div class="col-sm-2 col-xs-12">
 					<div id="gtco-logo">
 						<a href="index.html">
-							<img src="images/logo.png" width="180px" height="70px">
+							<img src="images/logo2.png" width="180px" height="70px">
 					</a>
 					</div>
 				</div>
@@ -105,7 +105,7 @@
 			<div class="row row-pb-md">
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
 					<h1>Bienvenido a Nuestras Oficinas</h1>
-					<p class="sub">BOILERS & VESSELS S.A.S., es una empresa Vallecaucana, con sede Principal en la ciudad de Cali, que busca satisfacer las
+					<p class="sub"  style="text-align:justify;">BOILERS & VESSELS S.A.S., es una empresa Vallecaucana, con sede Principal en la ciudad de Cali, que busca satisfacer las
 						necesidades de los sectores productivos de la industria, tanto a nivel nacional e internacional, como Ingenios Azucareros, Papeleros,
 						Termoeléctricos, Alimenticios, entre otros. Enfocados en la reparación, fabricación, montaje y mantenimientos de equipos industriales
 						y calderas, abarcando lo relacionado con la ingeniería mecánica, eléctrica e instrumentación y diseño. Buscando el mejoramiento continuo
@@ -250,38 +250,22 @@
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
-					<h1>Contact Us</h1>
-					<p class="sub">Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h1>Contactenos</h1>
+					<p class="sub">Con mucho gusto atenderemos todas sus solicitudes.</p>
 					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Contact</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-md-push-6 animate-box">
-					<form action="#">
-						<div class="form-group">
-							<label for="name" class="sr-only">Name</label>
-							<input type="text" class="form-control" placeholder="Name" id="name">
-						</div>
-						<div class="form-group">
-							<label for="email" class="sr-only">Email</label>
-							<input type="text" class="form-control" placeholder="Email" id="email">
-						</div>
-						<div class="form-group">
-							<label for="message" class="sr-only">Message</label>
-							<textarea name="message" id="message" class="form-control" cols="30" rows="7" placeholder="Message"></textarea>
-						</div>
-						<div class="form-group">
-							<input type="submit" value="Send Message" class="btn btn-primary">
-						</div>
-					</form>
+
 				</div>
 				<div class="col-md-4 col-md-pull-6 animate-box">
 					<div class="gtco-contact-info">
 						<ul>
-							<li class="address">198 West 21th Street, Suite 721 New York NY 10016</li>
-							<li class="phone"><a href="tel://1235235598">+ 1235 2355 98</a></li>
+							<li class="address">calle xxx Cali-Colombia</li>
+							<li class="phone"><a href="tel://1235235598">310 xxxxxxx</a></li>
 							<li class="email"><a href="mailto:info@yoursite.com">info@example.com</a></li>
-							<li class="url"><a href="#">http://example.com</a></li>
+
 						</ul>
 					</div>
 				</div>
@@ -295,9 +279,13 @@
 			<div class="row copyright">
 				<div class="col-md-12">
 					<p class="pull-left">
+
+						<!--
 						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
-					</p>
+					
+						-->
+						</p>
 					<p class="pull-right">
 						<ul class="gtco-social-icons pull-right">
 							<li><a href="#"><i class="icon-twitter"></i></a></li>
