--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 				<div class="col-md-8 col-md-offset-2 heading animate-box" data-animate-effect="fadeIn">
 					<h1>Contactenos</h1>
 					<p class="sub">Con mucho gusto atenderemos todas sus solicitudes.</p>
-					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Contact</p>
+					<p class="subtle-text animate-box" data-animate-effect="fadeIn">Contactenos</p>
 				</div>
 			</div>
 			<div class="row">
@@ -283,7 +283,7 @@
 						<!--
 						<small class="block">&copy; 2016 Free HTML5. All Rights Reserved.</small>
 						<small class="block">Designed by <a href="http://freehtml5.co/" target="_blank">FreeHTML5.co</a> Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a></small>
-					
+
 						-->
 						</p>
 					<p class="pull-right">
