--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 					<div class="display-t">
 						<div class="display-tc">
 							<h1 class="animate-box" data-animate-effect="fadeIn">La firma más grande en la que puedes confiar</h1>
-							<p class="gtco-video-link animate-box" data-animate-effect="fadeIn"><a href="https://www.youtube.com/watch?v=lP3K3xXIZ3s" class="popup-vimeo"><i class="icon-controller-play"></i></a></p>
+							<p class="gtco-video-link animate-box" data-animate-effect="fadeIn"><a href="https:www." class="popup-vimeo"><i class="icon-controller-play"></i></a></p>
 						</div>
 					</div>
 				</div>
